Transform work orders api into Swagger docs.
