# src/main/resources/swagger/workstation-api.yaml
@@ -19,123 +19,92 @@ basePath: /
 #                                           Paths                              #
 ################################################################################
 paths:
-  /api/tasks:
-    get:
-      description: Retrieving the collection of user tasks
+  /workorder:
+    post:
+      description: Create a work order
       tags:
-        - tasks
-      operationId: getAllTasks
+        - workOrders
+      operationId: createWorkOrder
+      consumes:
+        - application/json
       produces:
         - application/json
+      parameters:
+        - $ref: '#/parameters/workOrder'
       responses:
         "200":
           description: Success
           schema:
             type: array
             items:
-              $ref: '#/definitions/Task'
-    post:
-      description: Creating a new user task
-      tags:
-        - tasks
-      operationId: createTask
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - $ref: '#/parameters/task'
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: '#/definitions/Task'
-        "400":
-          description: Bad request
-          schema:
-            $ref: '#/definitions/Message'
-  /api/tasks/{id}:
-    put:
-      description: Updating an existing user task
-      tags:
-        - tasks
-      operationId: updateTask
-      parameters:
-        - $ref: '#/parameters/id'
-        - $ref: '#/parameters/task'
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: '#/definitions/Task'
-        "400":
-          description: Bad request
-          schema:
-            $ref: '#/definitions/Message'
-        "404":
-          description: Task not found
-          schema:
-            $ref: '#/definitions/Message'
-    delete:
-      description: Deleting an existing user task
-      tags:
-        - tasks
-      operationId: deleteTask
-      parameters:
-        - $ref: '#/parameters/id'
-      produces:
-        - application/json
-      responses:
-        "204":
-          description: Success
-        "404":
-          description: Task not found
-          schema:
-            $ref: '#/definitions/Message'
+              $ref: '#/definitions/CreateWorkorderResponse'
 
 ################################################################################
 #                                   Parameters                                 #
 ################################################################################
 parameters:
-  id:
-    name: id
-    in: path
-    description: ID of the task you want to update or delete
-    type: integer
-    format: int64
-    required: true
-  task:
-    name: task
+  workOrder:
+    name: workOrder
     in: body
-    description: Representation of the task you want to create or update
+    description: Work order for a workstation
     required: true
     schema:
-      $ref: '#/definitions/Task'
+      $ref: '#/definitions/WorkOrder'
 
 ################################################################################
 #                                 Definitions                                  #
 ################################################################################
 definitions:
-  Task:
-    description: A user task
+  Workstation:
+    description: Workstation
     properties:
-      id:
-        type: integer
-        format: int64
-        description: The unique identifier of the given task
-      description:
-        description: Description of the task
+      name:
         type: string
-      completed:
-        type: boolean
-        description: Indication if the task was completed or not
-  Message:
-    description: A message containing more info why the operation failed
+        description: Name of the workstation
+      url:
+        type: string
+        description: Optional URL of the workstation. Is is appended with `/works`.
+      parameters:
+        type: object
+        additionalProperties:
+          type: string
+        description: Free named parameters. They do not have any pupose, just to pass some data through assebly line workstations.
+    required:
+    - name
+
+  WorkOrder:
+    description: Work order for a workstation.
+    required:
+    - workstationName
     properties:
-      message:
+      workstationName:
         type: string
-        description: The message itself
+        description: 'Name of the workstation which is supposed to execute the work, e.g.: car body.'
+      parameters:
+        type: object
+        additionalProperties:
+          type: string
+        description: Free named parameters. They do not have any pupose, just to pass some data through assebly line workstations.
+      nextStations:
+        type: array
+        items:
+          $ref: '#/definitions/Workstation'
+
+  MessageContext:
+    description: Describes how a request or response was created.
+    properties:
+      correlationId:
+        type: string
+        description: Client generated ID to correlate all service requests in one business operation (transaction).
+
+  CreateWorkorderResponse:
+    properties:
+      body:
+        $ref: '#/definitions/Workstation'
+      messageContext:
+        $ref: '#/definitions/MessageContext'
+      runtimeContext:
+        type: object
+        additionalProperties:
+          type: object
+        description: Describes runtime environment of a pod or container executing the request.
